--- a/index.html
+++ b/index.html
@@ -15,20 +15,15 @@
         .clock-box { background: white; padding: 8px 15px; border-radius: 12px; font-weight: 600; font-size: 14px; box-shadow: 0 4px 10px rgba(0,0,0,0.03); color: var(--blue); }
         .glass-card { background: white; border-radius: 20px; padding: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.05); margin-bottom: 20px; }
         .dashboard-container { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 15px; align-items: start; }
-        
-        /* SLIDING TEXT */
-        .sliding-container { overflow: hidden; white-space: nowrap; width: 60%; position: relative; }
-        .sliding-text { display: inline-block; animation: scrollText 15s linear infinite; padding-right: 50px; }
+        .sliding-container { overflow: hidden; white-space: nowrap; width: 60%; }
+        .sliding-text { display: inline-block; animation: scrollText 15s linear infinite; padding-right: 50px; font-weight: 600; }
         @keyframes scrollText { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
-
-        /* SEARCH & SUGGESTIONS */
         .search-container { position: relative; margin-bottom: 20px; }
         .search-box { width: 100%; padding: 12px; border-radius: 12px; border: 2px solid #e2e8f0; outline: none; }
-        .suggest-list { position: absolute; top: 55px; left: 0; width: 100%; background: white; border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); z-index: 1000; display: none; max-height: 250px; overflow-y: auto; }
+        .suggest-list { position: absolute; top: 55px; left: 0; width: 100%; background: white; border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); z-index: 1000; display: none; border: 1px solid #eee; }
         .suggest-item { padding: 12px 15px; font-size: 13px; border-bottom: 1px solid #f1f5f9; cursor: pointer; }
-
         .nav-tabs { display: flex; gap: 10px; margin-bottom: 20px; }
-        .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: #e2e8f0; font-size: 14px; }
+        .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: #e2e8f0; }
         .tab-btn.active { background: var(--blue); color: white; }
         .folder-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); gap: 8px; }
         .folder { background: #f8fafc; padding: 12px; border-radius: 12px; text-align: center; cursor: pointer; font-weight: 600; font-size: 11px; border: 1px solid #e2e8f0; }
@@ -41,7 +36,7 @@
 
 <div id="auth-screen">
     <div class="glass-card" style="max-width:400px; margin: 80px auto; text-align:center;">
-        <h2 style="color:var(--blue)">Theological Library</h2>
+        <h2 style="color:var(--blue)">Jesus is the Saviour</h2>
         <button class="btn-blue" style="width:100%; padding:15px;" onclick="signIn()">Login with Google</button>
     </div>
 </div>
@@ -51,18 +46,13 @@
         <div><span style="color:var(--blue); font-weight:800; font-size:12px;">JESUS IS THE SAVIOUR</span><h1 style="margin:0; font-size:18px;">Library</h1></div>
         <div id="clock" class="clock-box">00:00:00</div>
     </div>
-
-    <div class="nav-tabs">
-        <button id="t-lib" class="tab-btn active" onclick="switchMainTab('lib')">Library</button>
-        <button id="t-prof" class="tab-btn" onclick="switchMainTab('prof')">Profile</button>
-    </div>
-
+    <div class="nav-tabs"><button id="t-lib" class="tab-btn active" onclick="switchMainTab('lib')">Library</button><button id="t-prof" class="tab-btn" onclick="switchMainTab('prof')">Profile</button></div>
+    
     <div id="lib-view">
         <div class="search-container">
-            <input type="text" id="libSearch" class="search-box" placeholder="🔍 Search library..." onkeyup="handleSuggest(this.value)" onkeypress="handleEnter(event)">
+            <input type="text" id="libSearch" class="search-box" placeholder="🔍 Search library..." onkeyup="handleSuggest(this.value)">
             <div id="suggest-list" class="suggest-list"></div>
         </div>
-
         <div class="dashboard-container">
             <div class="glass-card"><h3>🕒 Recent Uploads</h3><div id="recent-list"></div></div>
             <div class="glass-card"><h3>🔥 Trending Now</h3><div id="trending-list"></div></div>
@@ -84,31 +74,16 @@
         <div class="glass-card"><h3>Profile</h3><p id="p-name"></p><button class="btn-blue" style="background:#ef4444" onclick="logout()">Logout</button></div>
         <div class="glass-card"><h3>📚 Borrowed Collection</h3><div id="borrowed-list"></div></div>
     </div>
-
-    <div id="cat-view" class="hidden">
-        <button onclick="document.getElementById('cat-view').classList.add('hidden')" class="btn-blue" style="background:#64748b; margin-bottom:15px;">← Back</button>
-        <h3 id="cat-name"></h3><div id="cat-list"></div>
-    </div>
 </div>
 
 <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg",
-      authDomain: "student-library-4a4e7.firebaseapp.com",
-      projectId: "student-library-4a4e7",
-      storageBucket: "student-library-4a4e7.firebasestorage.app",
-      messagingSenderId: "827419448917",
-      appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-    const auth = firebase.auth();
-    let allBooks = [];
-    let currentUser = null;
-    let loginTime = null;
+    const db = firebase.firestore(); const auth = firebase.auth();
+    let allBooks = []; let currentUser = null;
+    let loginTime = Date.now();
 
     setInterval(() => { document.getElementById('clock').innerText = new Date().toLocaleTimeString(); }, 1000);
 
+    // LOGIN STABILITY FIX
     async function signIn() {
         const p = new firebase.auth.GoogleAuthProvider();
         try { await auth.signInWithPopup(p); } catch(e) { auth.signInWithRedirect(p); }
@@ -121,24 +96,10 @@
             document.getElementById('dashboard').classList.remove('hidden');
             document.getElementById('p-name').innerText = user.displayName;
             loadLib(); listenBorrows();
-            logAct("App Opened");
-        } else {
-            document.getElementById('auth-screen').classList.remove('hidden');
-            document.getElementById('dashboard').classList.add('hidden');
         }
     });
 
-    function logAct(type, dur = "0s") {
-        if(currentUser) db.collection("activity_logs").add({ userId: currentUser.uid, activityType: type, duration: dur, timestamp: new Date().toISOString() });
-    }
-
-    function renderB(id, t) {
-        return `<div class="book-item" data-title="${(t||'').toLowerCase()}">
-            <div class="sliding-container"><span class="sliding-text">${t || id}</span></div>
-            <button class="btn-blue" onclick="borrowBook('${id}', '${t}')">Borrow</button>
-        </div>`;
-    }
-
+    // SEARCH & NAVIGATION
     function handleSuggest(q) {
         const list = document.getElementById('suggest-list');
         if (q.length < 2) { list.style.display = "none"; return; }
@@ -154,14 +115,11 @@
         }
     }
 
-    function handleEnter(e) {
-        if(e.key === 'Enter') {
-            const q = document.getElementById('libSearch').value.toLowerCase();
-            document.querySelectorAll('.book-item').forEach(el => {
-                el.style.display = el.dataset.title.includes(q) ? "flex" : "none";
-            });
-            document.getElementById('suggest-list').style.display = "none";
-        }
+    function renderB(id, t) {
+        return `<div class="book-item">
+            <div class="sliding-container"><span class="sliding-text">${t || id}</span></div>
+            <button class="btn-blue" onclick="borrowBook('${id}', '${t}')">Borrow</button>
+        </div>`;
     }
 
     function loadLib() {
@@ -185,21 +143,8 @@
         snap.forEach(doc => l.innerHTML += renderB(doc.id, doc.data().title));
     }
 
-    function listenBorrows() {
-        db.collection("borrows").where("userId", "==", currentUser.uid).onSnapshot(snap => {
-            const list = document.getElementById('borrowed-list'); list.innerHTML = snap.empty ? "No books." : "";
-            snap.forEach(doc => {
-                const b = doc.data();
-                const days = 7 - Math.ceil(Math.abs(new Date() - new Date(b.borrowedAt))/(1000*60*60*24));
-                list.innerHTML += `<div class="book-item"><span><b>${b.title}</b> (${days} days left)</span>
-                    <button class="btn-blue" style="background:#ef4444" onclick="db.collection('borrows').doc('${doc.id}').delete()">Return</button></div>`;
-            });
-        });
-    }
-
-    async function borrowBook(id, t) { if(prompt("Code:") === "BORROW2026") await db.collection("borrows").add({ userId: currentUser.uid, bookId: id, title: t, borrowedAt: new Date().toISOString() }); }
+    function logout() { auth.signOut().then(() => location.reload()); }
     function switchMainTab(t) { document.getElementById('lib-view').classList.toggle('hidden', t !== 'lib'); document.getElementById('prof-view').classList.toggle('hidden', t !== 'prof'); }
-    function logout() { const dur = Math.round((Date.now() - loginTime)/1000) + "s"; logAct("App Closed", dur); auth.signOut().then(() => location.reload()); }
 </script>
 </body>
 </html>
