--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         :root { --blue: #3b82f6; --orange: #f97316; --green: #10b981; --purple: #a855f7; --bg: #0b1120; --card-bg: #1e293b; --text-main: #f8fafc; --text-sub: #94a3b8; --border: #334155; }
         body { font-family: 'Poppins', sans-serif; background: var(--bg); margin: 0; padding: 15px; color: var(--text-main); overflow-x: hidden; }
         .glass-card { background: var(--card-bg); border-radius: 20px; padding: 20px; border: 1px solid var(--border); margin-bottom: 15px; }
-        .stat-card { padding: 15px; border-radius: 15px; color: white; text-align: center; cursor: pointer; }
+        .stat-card { padding: 15px; border-radius: 15px; color: white; text-align: center; cursor: pointer; transition: 0.2s; position: relative; z-index: 10; }
+        .stat-card:active { transform: scale(0.95); }
+        .stat-card p { font-size: 20px; margin: 5px 0 0; font-weight: 800; }
         .book-item { background: #0f172a; padding: 15px; border-radius: 15px; border: 1px solid var(--border); margin-bottom: 12px; }
         .login-field, select, textarea { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 12px; outline: none; box-sizing: border-box; font-family: inherit; }
         .btn-preview { background: var(--blue); color: white; border: none; padding: 10px 15px; border-radius: 8px; cursor: pointer; font-size: 11px; font-weight: 600; margin-top: 5px; }
@@ -35,14 +37,14 @@
             <input type="text" id="login-coll-id" class="login-field" placeholder="College ID">
             <input type="text" id="login-user-id" class="login-field" placeholder="User ID">
             <input type="password" id="login-pass" class="login-field" placeholder="Password">
-            <button onclick="handleLogin()" style="background:var(--blue); color:white; border:none; width:100%; padding:15px; border-radius:12px; font-weight:600; cursor:pointer;">Enter Library</button>
+            <button onclick="handleLogin()" style="background:var(--blue); color:white; border:none; width:100%; padding:15px; border-radius:12px; font-weight:600; cursor:pointer;">Enter Portal</button>
         </div>
     </div>
 
     <div id="dashboard" class="hidden">
         <div class="time-header">
             <div id="session-box" class="time-box" style="border-color: var(--green);"><span class="time-label"><span class="status-dot"></span>Session</span><br><span id="session-clock" class="time-val" style="color: var(--green);">00:00:00</span></div>
-            <div class="time-box"><span class="time-label">Current</span><br><span id="real-time-clock" class="time-val" style="color: var(--blue);">00:00:00</span></div>
+            <div class="time-box"><span class="time-label">Clock</span><br><span id="real-time-clock" class="time-val" style="color: var(--blue);">00:00:00</span></div>
         </div>
 
         <div style="display:grid; grid-template-columns: repeat(3, 1fr); gap:10px; margin-bottom:20px;">
@@ -54,12 +56,12 @@
         <div style="display:grid; grid-template-columns: 2fr 1.2fr; gap: 15px;">
             <div>
                 <input type="text" id="lib-search" class="login-field" placeholder="🔍 Search library..." oninput="showSug(this.value)">
-                <div id="search-suggestions" class="hidden glass-card" style="position:absolute; z-index:10000; width:50%; max-height:200px; overflow-y:auto;"></div>
+                <div id="search-suggestions" class="hidden glass-card" style="position:absolute; z-index:10000; width:50%; max-height:200px; overflow-y:auto; border-color:var(--blue);"></div>
 
                 <div class="glass-card"><h3>📚 Categories</h3>
                     <div style="display:grid; grid-template-columns: 1fr 1fr; gap:8px;">
                         <div class="cat-item" onclick="loadCat('Theology')">📖 Theology</div>
-                        <div class="cat-item" onclick="loadCat('History')">⛪ History</div>
+                        <div class="cat-item" onclick="loadCat('Church History')">⛪ History</div>
                         <div class="cat-item" onclick="loadCat('Mission')">🌍 Mission</div>
                         <div class="cat-item" onclick="loadCat('Bible Intro')">📘 Bible</div>
                     </div>
@@ -71,50 +73,56 @@
             <div>
                 <div class="glass-card" style="border-color: var(--purple);">
                     <h4 style="margin:0; color:var(--purple);">💡 Suggestions</h4>
-                    <textarea id="feat-suggest" style="height:100px; margin-top:10px;" placeholder="Required features..."></textarea>
+                    <textarea id="feat-suggest" style="height:80px; margin-top:10px;" placeholder="Add feature..."></textarea>
                     <button class="btn-preview" style="background:var(--purple); width:100%;" onclick="submitSuggestion()">Send</button>
                 </div>
 
                 <div class="glass-card" style="border-color: var(--orange);">
-                    <h3 style="margin-top:0; color:var(--orange);">📖 Request a Book</h3>
-                    <input type="text" id="req-book" placeholder="Book Name (Mandatory)" class="login-field">
-                    <input type="text" id="req-author" placeholder="Author (Optional)" class="login-field">
-                    <button class="btn-preview" style="background:var(--orange); width:100%;" onclick="submitRequest()">Submit Request</button>
+                    <h3 style="margin:0; color:var(--orange);">📖 Request a Book</h3>
+                    <input type="text" id="req-book" placeholder="Book Name" class="login-field" style="margin-top:10px;">
+                    <button class="btn-preview" style="background:var(--orange); width:100%;" onclick="submitRequest()">Submit</button>
                 </div>
 
-                <div class="glass-card">
-                    <h4>📞 Contact Us</h4>
-                    <button class="btn-preview" style="width:100%;" onclick="showContactModal()">Open Helpdesk</button>
-                </div>
+                <div class="glass-card"><h4>📞 Helpdesk</h4><button class="btn-preview" style="width:100%;" onclick="showContactModal()">Open Helpdesk</button></div>
             </div>
         </div>
     </div>
 
-    <div id="reader-overlay" class="hidden">
-        <div style="background:#1e293b; padding:15px; display:flex; justify-content:space-between; align-items:center;"> 
-            <span id="reader-title"></span> 
-            <button onclick="closeReader()" style="background:red; color:white; border:none; padding:8px 12px; border-radius:5px;">Exit</button> 
-        </div> 
-        <iframe id="pdf-frame" style="width:100%; height:100%; border:none;"></iframe>
+    <div id="full-lib-view" class="hidden"><div style="display:flex; justify-content:space-between; align-items:center;"><h3>📚 All Books</h3><button onclick="closeView('full-lib-view')" class="btn-preview">Back</button></div><div id="full-book-list"></div></div>
+    
+    <div id="borrow-view" class="hidden"><div style="display:flex; justify-content:space-between; align-items:center;"><h3>📥 Your Issued Books</h3><button onclick="closeView('borrow-view')" class="btn-preview">Back</button></div><div id="borrow-list"></div></div>
+
+    <div id="profile-overlay" class="hidden">
+        <div class="glass-card" style="max-width:350px; margin:auto; text-align:center;">
+            <h2 id="prof-name">Name</h2>
+            <div style="background:var(--blue); display:inline-block; padding:5px 15px; border-radius:20px; font-size:11px; font-weight:800; margin-bottom:15px;" id="prof-role">ROLE</div>
+            <div style="text-align:left; font-size:12px; margin-bottom:20px;">
+                <p><b>Coll ID:</b> <span id="p-coll-id"></span></p>
+                <p><b>User ID:</b> <span id="p-stud-id"></span></p>
+            </div>
+            <button onclick="toggleProfile()" class="btn-preview">Back</button>
+            <button onclick="location.reload()" style="background:red; margin-top:10px;" class="btn-preview">Logout</button>
+        </div>
     </div>
+
+    <div id="reader-overlay" class="hidden"><div style="background:#1e293b; padding:15px; display:flex; justify-content:space-between; align-items:center;"><span id="reader-title"></span><button onclick="closeReader()" style="background:red; color:white; border:none; padding:8px 12px; border-radius:5px;">Exit</button></div><iframe id="pdf-frame" style="width:100%; height:100%; border:none;"></iframe></div>
 
     <script>
         const firebaseConfig = { apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg", authDomain: "theolib.in", projectId: "student-library-4a4e7", storageBucket: "student-library-4a4e7.firebasestorage.app", messagingSenderId: "827419448917", appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc" };
         firebase.initializeApp(firebaseConfig); const db = firebase.firestore();
         let currentUser = null; let collegeBooks = []; let sessionSeconds = 0; let isActive = true;
 
-        // PAUSE LOGIC: Stop timer when tab is hidden
+        // PAUSE LOGIC
         document.addEventListener("visibilitychange", () => {
             isActive = !document.hidden;
             document.getElementById('session-box').classList.toggle('paused', !isActive);
         });
 
         async function handleLogin() {
-            const role = document.getElementById('login-role').value, cid = document.getElementById('login-coll-id').value.trim(), uid = document.getElementById('login-user-id').value.trim(), pass = document.getElementById('login-pass').value.trim();
+            const cid = document.getElementById('login-coll-id').value.trim(), uid = document.getElementById('login-user-id').value.trim(), pass = document.getElementById('login-pass').value.trim();
             const snap = await db.collection("users").where("collegeId","==",cid).where("studentId","==",uid).where("password","==",pass).get();
             if(!snap.empty) {
-                const u = snap.docs[0].data(); if((u.role || 'student') !== role) { alert("Wrong Role Selected"); return; }
-                currentUser = { uid: snap.docs[0].id, ...u };
+                currentUser = { uid: snap.docs[0].id, ...snap.docs[0].data() };
                 document.getElementById('auth-screen').classList.add('hidden'); 
                 document.getElementById('dashboard').classList.remove('hidden');
                 initSystem();
@@ -122,66 +130,68 @@
         }
 
         function initSystem() { 
-            // Corrected timer: only one interval, ticks only if isActive
-            setInterval(() => { 
-                if(isActive) {
-                    sessionSeconds++; 
-                    updCl('session-clock', sessionSeconds); 
-                }
-            }, 1000);
-            setInterval(() => { 
-                document.getElementById('real-time-clock').innerText = new Date().toLocaleTimeString(); 
-            }, 1000);
-            load(); 
+            setInterval(() => { if(isActive) { sessionSeconds++; updCl('session-clock', sessionSeconds); } }, 1000);
+            setInterval(() => { document.getElementById('real-time-clock').innerText = new Date().toLocaleTimeString(); }, 1000);
+            loadLibrary(); 
         }
 
-        function updCl(id, s) { 
-            const h = Math.floor(s/3600).toString().padStart(2,'0'), 
-                  m = Math.floor((s%3600)/60).toString().padStart(2,'0'), 
-                  sec = (s%60).toString().padStart(2,'0'); 
-            document.getElementById(id).innerText = `${h}:${m}:${sec}`; 
-        }
+        function updCl(id, s) { const h = Math.floor(s/3600).toString().padStart(2,'0'), m = Math.floor((s%3600)/60).toString().padStart(2,'0'), sec = (s%60).toString().padStart(2,'0'); document.getElementById(id).innerText = `${h}:${m}:${sec}`; }
 
-        function load() {
+        function loadLibrary() {
             db.collection("library_settings").where("allowedColleges","array-contains",currentUser.collegeId).onSnapshot(snap => {
                 collegeBooks = [];
-                const recList = document.getElementById('recent-list');
-                const trendList = document.getElementById('trending-list');
-                recList.innerHTML = ""; trendList.innerHTML = "";
+                const rec = document.getElementById('recent-list'), trend = document.getElementById('trending-list');
+                rec.innerHTML = ""; trend.innerHTML = "";
                 snap.forEach(doc => { 
                     const b = doc.data(); const bookData = {id: doc.id, ...b}; collegeBooks.push(bookData); 
-                    const html = `<div class="book-item"><b>${b.title}</b><br><button class="btn-preview" onclick="openPdf('${doc.id}','${b.title}')">Read Preview</button></div>`;
-                    recList.innerHTML += html;
-                    if(b.recent) trendList.innerHTML += html;
+                    const html = `<div class="book-item"><b>${b.title}</b><br>
+                        <button class="btn-preview" onclick="openPdf('${doc.id}','${b.title}')">Preview</button>
+                        <button class="btn-preview" style="background:var(--orange)" onclick="borrowBook('${doc.id}','${b.title}')">Borrow</button>
+                    </div>`;
+                    rec.innerHTML += html;
+                    if(b.recent) trend.innerHTML += html;
                 });
                 document.getElementById('top-total').innerText = collegeBooks.length;
             });
-
             db.collection("borrows").where("userId","==",currentUser.uid).onSnapshot(snap => {
                 document.getElementById('top-issued').innerText = snap.size;
+                const list = document.getElementById('borrow-list'); list.innerHTML = "";
+                snap.forEach(doc => { list.innerHTML += `<div class="book-item"><b>${doc.data().title}</b><button class="btn-preview" onclick="openPdf('${doc.data().bookId}','${doc.data().title}')">Open Full</button></div>`; });
             });
         }
 
-        function showSug(v) {
-            const sug = document.getElementById('search-suggestions');
-            if(!v.trim()) { sug.classList.add('hidden'); return; }
-            const filtered = collegeBooks.filter(b => b.title.toLowerCase().includes(v.toLowerCase()) || b.category.toLowerCase().includes(v.toLowerCase()));
-            sug.innerHTML = filtered.map(b => `<div style="padding:10px; cursor:pointer; border-bottom:1px solid var(--border);" onclick="triggerSearch('${b.title}')">${b.title}</div>`).join('');
-            sug.classList.remove('hidden');
+        async function borrowBook(id, t) {
+            if(confirm(`Do you want to borrow ${t}?`)) {
+                await db.collection("borrows").add({ userId: currentUser.uid, bookId: id, title: t, date: Date.now() });
+                alert("Book Added to your Issued List!");
+            }
         }
 
-        async function submitRequest() {
-            const b = document.getElementById('req-book').value.trim();
-            if(!b) { alert("Book name is mandatory"); return; }
-            await db.collection("admin_messages").add({ type: "Book Request", book: b, author: document.getElementById('req-author').value, user: currentUser.fullName, college: currentUser.collegeId, date: Date.now() });
-            alert("Request sent!"); document.getElementById('req-book').value = "";
+        function showFullLibrary() {
+            const list = document.getElementById('full-book-list'); list.innerHTML = "";
+            collegeBooks.forEach(b => { list.innerHTML += `<div class="book-item"><b>${b.title}</b><br><button class="btn-preview" onclick="openPdf('${b.id}','${b.title}')">Preview</button> <button class="btn-preview" style="background:var(--orange)" onclick="borrowBook('${b.id}','${b.title}')">Borrow</button></div>`; });
+            document.getElementById('full-lib-view').classList.remove('hidden');
+        }
+
+        function loadCat(c) {
+            const list = document.getElementById('full-book-list'); list.innerHTML = "";
+            collegeBooks.filter(x => x.category === c).forEach(b => { list.innerHTML += `<div class="book-item"><b>${b.title}</b><br><button class="btn-preview" onclick="openPdf('${b.id}','${b.title}')">Preview</button></div>`; });
+            document.getElementById('full-lib-view').classList.remove('hidden');
+        }
+
+        function toggleProfile() {
+            document.getElementById('prof-name').innerText = currentUser.fullName;
+            document.getElementById('prof-role').innerText = (currentUser.role || "student").toUpperCase();
+            document.getElementById('p-coll-id').innerText = currentUser.collegeId;
+            document.getElementById('p-stud-id').innerText = currentUser.studentId;
+            document.getElementById('profile-overlay').classList.toggle('hidden');
         }
 
         function openPdf(id, title) { document.getElementById('reader-title').innerText = title; document.getElementById('pdf-frame').src = `/public/${id}_read_online.pdf`; document.getElementById('reader-overlay').classList.remove('hidden'); }
-        function closeReader() { document.getElementById('reader-overlay').classList.add('hidden'); document.getElementById('pdf-frame').src = ""; }
-        function showContactModal() { document.getElementById('contact-modal').classList.remove('hidden'); }
-        function closeContactModal() { document.getElementById('contact-modal').classList.add('hidden'); }
-        function handleLogout() { location.reload(); }
+        function closeReader() { document.getElementById('reader-overlay').classList.add('hidden'); }
+        function showBorrowView() { document.getElementById('borrow-view').classList.remove('hidden'); }
+        function closeView(id) { document.getElementById(id).classList.add('hidden'); }
+        function showContactModal() { /* Logic for Contact Modal opening */ }
     </script>
 </body>
 </html>
